<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_poster_thumbnail"
            android:layout_width="@dimen/poster_width_185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/txv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginRight="4dp"
            android:padding="@dimen/margin_4dp"
            android:text="@string/txt_movie_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:padding="@dimen/margin_4dp"
                android:text="@string/txt_vote_average"
                android:textColor="@color/green"
                app:layout_constraintBottom_toTopOf="@+id/txv_overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txv_movie_title" />

            <TextView
                android:id="@+id/txv_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:padding="@dimen/margin_4dp"
                android:text="@string/number" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:layout_marginLeft="@dimen/margin_12dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/margin_4dp"
                android:layout_marginBottom="8dp"
                android:padding="@dimen/margin_4dp"
                android:text="@string/txt_release_date" />

            <TextView
                android:id="@+id/txv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:padding="@dimen/margin_4dp"
                android:text="@string/date" />

        </LinearLayout>

        <TextView
            android:id="@+id/txv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"
            android:padding="@dimen/margin_4dp"
            android:text="@string/txt_movie_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/btn_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:text="@string/favorites" />


        <TextView
            android:id="@+id/txv_trailers_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:padding="@dimen/margin_4dp"
            android:text="@string/trailers"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ListView
            android:id="@+id/lsv_trailers_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp">

        </ListView>

        <TextView
            android:id="@+id/txv_reviews_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <ListView
            android:id="@+id/lsv_reviews_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp">

        </ListView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>